<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageSteampunk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/splash" />

    <EditText
        android:id="@+id/PlayerOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/PlayerOneName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/PlayerTwoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/PlayerTwoName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="250dp"
        android:layout_height="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onStartPuzzle"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/howtoPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onHowToPlay"
        android:text="@string/howToPlay" />

</LinearLayout>